Se pueden usar las opciones de formato, falta indicador de descarga

--- a/DescargarMP4/descargarDeYoytube/src/Componentes/form/checkBox.css
+++ b/DescargarMP4/descargarDeYoytube/src/Componentes/form/checkBox.css
@@ -68,3 +68,9 @@ label:has(input[type="radio"]:checked)::before {
   border-color: rgb(159, 240, 36);
   
 }
+
+@media(max-width:340px){
+  span{
+    font-size: 13px;
+  }
+}
